# Jinzo-GameEngine

./: .gitignore  CMakeLists.txt
Libraries/include/assimp/: revision.h
Libraries/include/glad/: glad.h
Libraries/include/stb/: stb_image.h
assets/: object.frag  object.vert
assets/Instanced/: Box.vert  Insttance.vert
assets/Models/Nissan/: scene.gltf
assets/Models/helmet/: scene.gltf
assets/Models/m41a/: scene.gltf
src/: Scene.cpp  Scene.h  glad.c  main.cpp
src/Algorithms/: Bounds.cpp  Bounds.h  List.hpp  Octree.cpp  Octree.h  States.hpp
src/Graphics/: Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  glMemory.hpp
src/Graphics/models/: Box.hpp  Cube.hpp  Lamp.hpp  ModelArray.hpp  Sphere.hpp
src/Physics/: Enivornment.cpp  Environment.h  RigidBody.cpp  RigidBody.h
src/io/: Camera.cpp  Camera.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Screen.cpp  Screen.h
x64/Debug/: Jinzo1.0.exe.recipe
